overflow fixed

--- a/src/Navbar/Navbar.scss
+++ b/src/Navbar/Navbar.scss
@@ -64,7 +64,8 @@
 
 .navbar.v2 {
     position: absolute;
-    height: 80px;
+    width: 100%;
+    height: 100px;
     font-size: 50px;
 
     .heading {
